Added more detailed descriptions to the README file

--- a/README.html
+++ b/README.html
@@ -126,10 +126,23 @@ $(document).ready(function () {
 
 <div id="work-out-1---data-wrangling-visualization" class="section level1">
 <h1>Work out 1 - Data Wrangling &amp; Visualization</h1>
+<hr />
+<p>In this project, we will work with data.frame/tibbles to produce plots and new data frames using the two packages: dplyr and ggplot2.</p>
+<div id="required-packages" class="section level2">
+<h2>Required Packages</h2>
 <ul>
-<li>working with data.frame/tibbles to produce plots using the two packages: dplyr and ggplot2</li>
-<li>W</li>
+<li>dplyr</li>
+<li>ggplot2</li>
+<li>readr</li>
 </ul>
+</div>
+<div id="description" class="section level2">
+<h2>Description</h2>
+<ul>
+<li>Manipulated nbaplayers data to create a new data frame that summarized attributes by teams, rather than by players</li>
+<li>Plotted horizontal bar graphs that displayed variables in descending order</li>
+</ul>
+</div>
 </div>
 
 
